tests/errors/macro/parser_unexpected_lexeme/undef_with_space.c
#undef A nghjk

int main()
{
	return 0;
}
